# koppiebot

./: .gitignore  cert.pem  chat.py  embed.py  key.pem  lambda_function.py  main.py  prompt.txt  pyproject.toml  questions.py  readme.md  requirements.txt
